tests/errors/return_top_level.efto
// Cannot return from top-level code.
return 1; // expect error: [line 2:1] Error at 'return': Can't return from top-level code.
